<resources>
    <string name="app_name">JuZiJia</string>
    <string name="welcome">欢迎使用桔子家管理系统</string>

    <string name="user_name">用户名</string>
    <string name="password">密码</string>

    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="login_empty">用户名或密码不能为空</string>
    <string name="login_error">账号或密码错误</string>
    <string name="remember_password">记住密码</string>
    <string name="create_user">注册账号</string>
    <string name="back">返回</string>

</resources>
